fixed spacing

--- a/style.css
+++ b/style.css
@@ -272,7 +272,7 @@ body.light .mn:before {
         "logos logos logos logos";
     grid-gap: 40px;
     padding-top: 150px;
-    padding-bottom: 80px;
+    padding-bottom: 0px;
     padding-left: 40px;
     padding-right: 40px;
 }
@@ -323,7 +323,7 @@ body.light .mn:before {
 }
 
 .clock-form {
-    background: var(--color-tertiary);
+    background: #cee3fd;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -842,6 +842,7 @@ canvas:hover h1 {
       background-repeat: no-repeat;
       margin: 40px;
       transition: 0.6s;
+	  flex-shrink:2;
   }
 
   .slink {
@@ -1089,6 +1090,7 @@ p {
 }
 
 #logos {
+	padding: 40px;
     height:100%;
     margin:auto;background-color:transparent;flex-direction: row; flex-wrap: wrap;
 }
@@ -1263,7 +1265,7 @@ p {
     }
 }
 
-
+/*
 @media (prefers-color-scheme:dark) {
     p, .navbar li {
         color: #485567;
